# pocket-shots

./: .gitignore  .gitmodules  CHANGES.md  LICENSE.md  README.md  pyproject.toml
src/pocket_shots/: __init__.py  data.py  files.py  image.py  parser.py  platforms.py
